src/objects/CPQ_FRULineItem__c.object
<CustomObject>
    <description>De-normalized table to capture FRU Line items belonging to aa proposal line item</description>
    <fields>
        <fullName>CPQ_Asset_Line_Quantity__c</fullName>
        <description>Reference to the total quantity for the FRU Item code populated via trigger</description>
        <formula>CPQ_Proposal_Line_item__r.Apttus_QPConfig__Quantity2__c  * CPQ_Asset_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reference to the total quantity for the FRU Item code populated via trigger</inlineHelpText>
        <label>Asset Line Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Asset_Quantity__c</fullName>
        <description>Reference to the asset quantity for the FRU Item code</description>
        <inlineHelpText>Reference to the asset quantity for the FRU Item code</inlineHelpText>
        <label>Asset Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_FRU_Description__c</fullName>
        <description>Reference to the FRU description of the FRU item code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the FRU description of the FRU item code</inlineHelpText>
        <label>FRU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_FRU_Item_Code__c</fullName>
        <description>Reference to the FRU item code equivalent to product code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the FRU item code equivalent to product code</inlineHelpText>
        <label>FRU Item Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Product_Code__c</fullName>
        <description>Reference to the product code for the product</description>
        <formula>CPQ_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reference to the product code for the product</inlineHelpText>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the product record that the FRU line item maps to</description>
        <inlineHelpText>Reference to the product record that the FRU line item maps to</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>FRU Line Items</relationshipLabel>
        <relationshipName>FRU_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Proposal_Line_item__c</fullName>
        <description>Reference to the proposal line item that FRU line item maps to</description>
        <inlineHelpText>Reference to the proposal line item that FRU line item maps to</inlineHelpText>
        <label>Proposal Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>FRU Line Items</relationshipLabel>
        <relationshipName>FRU_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CPQ_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the proposal that FRU line item and LI maps to</description>
        <inlineHelpText>Reference to the proposal that FRU line item and LI maps to</inlineHelpText>
        <label>Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>FRU Line Items</relationshipLabel>
        <relationshipName>FRU_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>FRU Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FLI-{00000000}</displayFormat>
        <label>FLI ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FRU Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>